<resources>
    //lain-lain
    <string name="text_gambar">Gambar</string>

    //perhitungan
    <string name="hitung_luas">Hitung Luas</string>
    <string name="hitung_keliling">Hitung Keliling</string>
    <string name="hitung_volume">Hitung Volume</string>
    <string name="hasil">Hasil</string>
    <string name="luas">Luas :</string>
    <string name="keliling">Keliling :</string>
    <string name="volume">Volume :</string>
    <string name="hitung">Hitung</string>

    //atribute
    <string name="tinggi">Tinggi</string>
    <string name="alas">Alas</string>
    <string name="jari_jari">Jari - Jari</string>
    <string name="zero">0</string>
    <string name="sisi">Sisi</string>
    <string name="sisiA">Sisi A</string>
    <string name="sisiB">Sisi B</string>
    <string name="sisiC">Sisi C</string>
    <string name="rusuk">Rusuk</string>
    <string name="luas_permukaan">Luas Permukaan</string>

    //bangun datar
    <string name="bangun_datar">Bangun Datar</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="segitiga">Segitiga</string>
    <string name="persegi">Persegi</string>

    //bangun ruang
    <string name="bangun_ruang">Bangun Ruang</string>

    //other
    <string name="masukan_nomor">Masukan Semua Nomor Yang Akan Dihitung</string>
    <string name="nama">Farid ari wibowo</string>
    <string name="nim">nim: A12.209.06251</string>
    <string name="lkubus">6 x ( rusuk x rusuk )</string>
    <string name="_12_x_rusuk">12 x rusuk</string>
    <string name="rusuk_x_rusuk_x_rusuk">rusuk x rusuk x rusuk</string>
    <string name="gambarkubus">gambarkubus</string>
    <string name="phi_x_r_x_r">Phi x (r x r)</string>
    <string name="phi_x_2_x_r">Phi x (2 x r)</string>
    <string name="spersegi">sisi x sisi</string>
    <string name="kpersegi">4 x sisi</string>
    <string name="sgtg">gambarsegitiga</string>
    <string name="lsegitiga">( alas x tinggi ) / 2</string>
    <string name="Ksegitiga">sisi A + sisi B + sisi C</string>
    <string name="pilih">Pilih</string>
    <string name="datar">Bangun Datar</string>
    <string name="lengkap">Farid Ari Wibowo_A12.2019.06251</string>
    <string name="ruang">Bangun Ruang</string>
    <string name="kubus">kubus</string>
    <string name="judul">Tugas Teknologi Bergerak Bangun Ruang dan Datar</string>

</resources>
