<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/biru"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.tugasteknologibergerak.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TableLayout
                android:id="@+id/table_gambar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/biru">

                <ImageView
                    android:id="@+id/gambar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/gambarkubus"
                    android:src="@drawable/kubus" />
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_toEndOf="@+id/table_gambar"
                android:background="@android:color/white"
               android:paddingStart="10dp"
                android:layout_marginStart="10dp"
                tools:ignore="RtlSymmetry">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/nama" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/nim"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/luas_permukaan"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/lkubus" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/keliling"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:text="@string/_12_x_rusuk" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/volume"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/rusuk_x_rusuk_x_rusuk" />
            </TableLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rusuk"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_rusuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:inputType="numberDecimal"
            android:autofillHints="" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:onClick="hitung_luas"
                android:text="@string/hitung_luas"
                android:textColor="@android:color/white"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:onClick="hitung_keliling"
                android:text="@string/hitung_keliling"
                android:textColor="@android:color/white"
                tools:ignore="UsingOnClickInXml"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:onClick="hitung_volume"
                android:text="@string/hitung_volume"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle,UsingOnClickInXml" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_hasil"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/hasil"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
