<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tugasteknologibergerak.PilihBangunRuangActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilih"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datar"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/lengkap"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/segitiga"
            android:onClick="segitiga"
            android:text="@string/segitiga"
            android:textColor="@android:color/white"
            tools:ignore="UsingOnClickInXml" />


        <Button
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/lingkaran"
            android:onClick="lingkaran"
            android:text="@string/lingkaran"
            android:textColor="@android:color/white"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/biru"
            android:onClick="persegi"
            android:text="@string/persegi"
            android:textColor="@android:color/white"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
</LinearLayout>
